--- a/index.html
+++ b/index.html
@@ -203,204 +203,208 @@
 </head>
 <body>
 
-<!-- Navbar -->
-<nav>
-  <div class="container flex navbar">
-    <div class="flex" style="gap:.7rem">
-      <img src="https://api.iconify.design/lucide:moon-star.svg?color=%236751ef&width=38" alt="Logo SleepWell"/>
-      <span class="navbar-logo">SleepWell <span style="color:var(--blue)">AI</span></span>
+  <!-- Navbar -->
+  <nav>
+    <div class="container flex navbar">
+      <div class="flex" style="gap:.7rem">
+        <img src="https://api.iconify.design/lucide:moon-star.svg?color=%236751ef&width=38" alt="Logo SleepWell"/>
+        <span class="navbar-logo">SleepWell <span style="color:var(--blue)">AI</span></span>
+      </div>
+      <div class="navbar-links">
+        <a href="#features">Fitur</a>
+        <a href="#why">Keunggulan</a>
+        <a href="#about">Tentang</a>
+        <a href="#faq">FAQ</a>
+        <a href="#testi">Testimoni</a>
+        <a href="#contact">Kontak</a>
+        <a href="login-user.html" class="cta">Masuk</a>
+        <a href="sign-up.html" class="cta" style="background:var(--blue);margin-left:.8rem;">Coba Gratis</a>
+      </div>
     </div>
-    <div class="navbar-links">
-      <a href="#features">Fitur</a>
-      <a href="#why">Keunggulan</a>
-      <a href="#about">Tentang</a>
-      <a href="#faq">FAQ</a>
-      <a href="#testi">Testimoni</a>
-      <a href="#contact">Kontak</a>
-      <a href="login-user.html" class="cta">Masuk</a>
-      <a href="sign-up.html" class="cta" style="background:var(--blue);margin-left:.8rem;">Coba Gratis</a>
-    </div>
-  </div>
-</nav>
-<div class="navspacer"></div>
+  </nav>
+  <div class="navspacer"></div>
 
-<!-- Hero -->
-<section class="container flex hero">
-  <div class="hero-text">
-    <div class="hero-title">Bangun Hidup Lebih Sehat<br>dengan <span>Tidur Berkualitas</span></div>
-    <div class="hero-sub">SleepWell AI membantu Anda memahami dan meningkatkan kualitas tidur lewat prediksi AI, insight kesehatan, dan solusi personal terpercaya.</div>
-    <div class="hero-cta">
-      <a href="sign-up.html" class="btn">Coba Gratis</a>
-      <a href="#features" class="btn btn-outline">Lihat Fitur</a>
+  <!-- Hero -->
+  <section class="container flex hero">
+    <div class="hero-text">
+      <div class="hero-title">
+        Bangun Hidup Lebih Sehat<br>dengan <span>Tidur Berkualitas</span>
+      </div>
+      <div class="hero-sub">
+        SleepWell AI membantu Anda memahami dan meningkatkan kualitas tidur lewat prediksi AI, insight kesehatan, dan solusi personal terpercaya.
+      </div>
+      <div class="hero-cta">
+        <a href="sign-up.html" class="btn">Coba Gratis</a>
+        <a href="#features" class="btn btn-outline">Lihat Fitur</a>
+      </div>
+      <div class="hero-trust"><span>✔️</span>Privasi terjaga & 100% gratis selamanya</div>
     </div>
-    <div class="hero-trust"><span>✔️</span>Privasi terjaga & 100% gratis selamanya</div>
-  </div>
-  <div class="hero-img">
-    <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=cover&w=500&q=80" alt="Tidur Sehat" />
-  </div>
-</section>
+    <div class="hero-img">
+      <img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?auto=format&fit=cover&w=500&q=80" alt="Tidur Sehat" />
+    </div>
+  </section>
 
-<!-- Why SleepWell -->
-<section class="container why-section" id="why">
-  <div class="why-title">Kenapa Memilih SleepWell AI?</div>
-  <div class="why-grid">
-    <div class="why-card">
-      <img src="https://api.iconify.design/lucide:moon-star.svg?color=%236751ef&width=56" alt="Akurat & Personal"/>
-      <h3>Akurat & Personal</h3>
-      <p>Prediksi & rekomendasi berbasis AI yang menyesuaikan kebutuhan tidur Anda.</p>
+  <!-- Why SleepWell -->
+  <section class="container why-section" id="why">
+    <div class="why-title">Kenapa Memilih SleepWell AI?</div>
+    <div class="why-grid">
+      <div class="why-card">
+        <img src="https://api.iconify.design/lucide:moon-star.svg?color=%236751ef&width=56" alt="Akurat & Personal"/>
+        <h3>Akurat & Personal</h3>
+        <p>Prediksi & rekomendasi berbasis AI yang menyesuaikan kebutuhan tidur Anda.</p>
+      </div>
+      <div class="why-card">
+        <img src="https://api.iconify.design/lucide:bar-chart-3.svg?color=%236751ef&width=56" alt="Visualisasi Interaktif"/>
+        <h3>Visualisasi Interaktif</h3>
+        <p>Progress tidur disajikan dengan grafik interaktif yang mudah dimengerti.</p>
+      </div>
+      <div class="why-card">
+        <img src="https://api.iconify.design/lucide:shield-check.svg?color=%236751ef&width=56" alt="Privasi Aman"/>
+        <h3>Privasi Aman</h3>
+        <p>Data Anda terenkripsi dan tidak pernah dijual ke pihak ketiga.</p>
+      </div>
+      <div class="why-card">
+        <img src="https://api.iconify.design/lucide:brain-circuit.svg?color=%236751ef&width=56" alt="Solusi Komprehensif"/>
+        <h3>Solusi Komprehensif</h3>
+        <p>Rekomendasi CBT-I, sleep hygiene, & edukasi pola hidup sehat.</p>
+      </div>
     </div>
-    <div class="why-card">
-      <img src="https://api.iconify.design/lucide:bar-chart-3.svg?color=%236751ef&width=56" alt="Visualisasi Interaktif"/>
-      <h3>Visualisasi Interaktif</h3>
-      <p>Progress tidur disajikan dengan grafik interaktif yang mudah dimengerti.</p>
-    </div>
-    <div class="why-card">
-      <img src="https://api.iconify.design/lucide:shield-check.svg?color=%236751ef&width=56" alt="Privasi Aman"/>
-      <h3>Privasi Aman</h3>
-      <p>Data Anda terenkripsi dan tidak pernah dijual ke pihak ketiga.</p>
-    </div>
-    <div class="why-card">
-      <img src="https://api.iconify.design/lucide:brain-circuit.svg?color=%236751ef&width=56" alt="Solusi Komprehensif"/>
-      <h3>Solusi Komprehensif</h3>
-      <p>Rekomendasi CBT-I, sleep hygiene, & edukasi pola hidup sehat.</p>
-    </div>
-  </div>
-</section>
+  </section>
 
-<!-- Fitur Section -->
-<section class="container fitur-section" id="features">
-  <div class="fitur-title">Fitur SleepWell AI</div>
-  <div class="fitur-grid">
-    <div class="fitur-card">
-      <img src="https://api.iconify.design/lucide:smartphone.svg?color=%236751ef&width=56" alt="Analisis Tidur Otomatis"/>
-      <h3>Analisis Tidur Otomatis</h3>
-      <p>Input data harian, SleepWell otomatis menganalisis durasi, kualitas, & gangguan tidur Anda.</p>
+  <!-- Fitur Section -->
+  <section class="container fitur-section" id="features">
+    <div class="fitur-title">Fitur SleepWell AI</div>
+    <div class="fitur-grid">
+      <div class="fitur-card">
+        <img src="https://api.iconify.design/lucide:smartphone.svg?color=%236751ef&width=56" alt="Analisis Tidur Otomatis"/>
+        <h3>Analisis Tidur Otomatis</h3>
+        <p>Input data harian, SleepWell otomatis menganalisis durasi, kualitas, & gangguan tidur Anda.</p>
+      </div>
+      <div class="fitur-card">
+        <img src="https://api.iconify.design/lucide:brain-cog.svg?color=%236751ef&width=56" alt="Rekomendasi Personal"/>
+        <h3>Rekomendasi Personal</h3>
+        <p>Saran CBT-I, pola tidur, olahraga, dan stress management khusus sesuai hasil analisis.</p>
+      </div>
+      <div class="fitur-card">
+        <img src="https://api.iconify.design/lucide:bar-chart-horizontal.svg?color=%236751ef&width=56" alt="Visualisasi & Progress"/>
+        <h3>Visualisasi & Progress</h3>
+        <p>Riwayat dan tren tidur divisualisasikan dengan grafik menarik, mudah dipahami semua usia.</p>
+      </div>
     </div>
-    <div class="fitur-card">
-      <img src="https://api.iconify.design/lucide:brain-cog.svg?color=%236751ef&width=56" alt="Rekomendasi Personal"/>
-      <h3>Rekomendasi Personal</h3>
-      <p>Saran CBT-I, pola tidur, olahraga, dan stress management khusus sesuai hasil analisis.</p>
+  </section>
+
+  <!-- Statistik/About -->
+  <section class="container about-section" id="about">
+    <div class="about-title">Tentang SleepWell AI</div>
+    <div class="about-desc">
+      SleepWell AI dikembangkan oleh tim multidisiplin di bidang kesehatan, data, dan teknologi.<br>
+      Visi kami: menghadirkan kualitas tidur optimal, edukasi kesehatan, dan kebiasaan sehat untuk masyarakat Indonesia.
     </div>
-    <div class="fitur-card">
-      <img src="https://api.iconify.design/lucide:bar-chart-horizontal.svg?color=%236751ef&width=56" alt="Visualisasi & Progress"/>
-      <h3>Visualisasi & Progress</h3>
-      <p>Riwayat dan tren tidur divisualisasikan dengan grafik menarik, mudah dipahami semua usia.</p>
+    <div class="stats-row">
+      <div class="stat-card"><h3>13.000+</h3><p>Data tidur diproses</p></div>
+      <div class="stat-card"><h3>4.9/5</h3><p>Rating pengguna</p></div>
+      <div class="stat-card"><h3>#1</h3><p>Aplikasi prediksi tidur di Indonesia</p></div>
+      <div class="stat-card"><h3>100%</h3><p>Data terenkripsi</p></div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- Statistik/About -->
-<section class="container about-section" id="about">
-  <div class="about-title">Tentang SleepWell AI</div>
-  <div class="about-desc">
-    SleepWell AI dikembangkan oleh tim multidisiplin di bidang kesehatan, data, dan teknologi.<br>
-    Visi kami: menghadirkan kualitas tidur optimal, edukasi kesehatan, dan kebiasaan sehat untuk masyarakat Indonesia.
-  </div>
-  <div class="stats-row">
-    <div class="stat-card"><h3>13.000+</h3><p>Data tidur diproses</p></div>
-    <div class="stat-card"><h3>4.9/5</h3><p>Rating pengguna</p></div>
-    <div class="stat-card"><h3>#1</h3><p>Aplikasi prediksi tidur di Indonesia</p></div>
-    <div class="stat-card"><h3>100%</h3><p>Data terenkripsi</p></div>
-  </div>
-</section>
-
-<!-- FAQ Section -->
-<section class="faq-section" id="faq">
-  <div class="faq-title">FAQ</div>
-  <div class="faq-item" onclick="toggleFaq(this)">
-    <div class="faq-q">Apakah SleepWell AI gratis? <span>▼</span></div>
-    <div class="faq-a">Ya, SleepWell AI gratis untuk semua pengguna, tanpa biaya tersembunyi.</div>
-  </div>
-  <div class="faq-item" onclick="toggleFaq(this)">
-    <div class="faq-q">Apakah data saya aman & rahasia? <span>▼</span></div>
-    <div class="faq-a">Tentu. Semua data Anda terenkripsi dan tidak pernah dibagikan ke pihak luar.</div>
-  </div>
-  <div class="faq-item" onclick="toggleFaq(this)">
-    <div class="faq-q">Bagaimana SleepWell AI memprediksi tidur? <span>▼</span></div>
-    <div class="faq-a">Kami menggunakan algoritma machine learning dari data aktivitas, stress, pola tidur, dan gaya hidup Anda untuk hasil prediksi akurat dan personal.</div>
-  </div>
-  <div class="faq-item" onclick="toggleFaq(this)">
-    <div class="faq-q">Apakah SleepWell bisa digunakan semua umur? <span>▼</span></div>
-    <div class="faq-a">Bisa. Cocok untuk remaja, dewasa, hingga lansia. Data rekomendasi akan menyesuaikan usia dan profil pengguna.</div>
-  </div>
-</section>
-<script>
-function toggleFaq(el) {
-  document.querySelectorAll('.faq-item').forEach(i=>i!==el&&i.classList.remove('open'));
-  el.classList.toggle('open');
-}
-</script>
-
-<!-- Testimoni Section -->
-<section class="testi-section" id="testi">
-  <div class="testi-title">Apa Kata Pengguna?</div>
-  <div class="testi-box" id="testi-box">
-    <img class="testi-img" id="testi-img" src="https://randomuser.me/api/portraits/women/65.jpg"/>
-    <div class="testi-quote" id="testi-quote">“SleepWell AI bener-bener bantu aku atur pola tidur! Sekarang bangun pagi lebih segar dan produktif.”</div>
-    <div class="testi-name" id="testi-name">— Nadia, Mahasiswi</div>
-    <div class="testi-arrows">
-      <button class="testi-arrow" onclick="prevTesti(event)">&lt;</button>
-      <button class="testi-arrow" onclick="nextTesti(event)">&gt;</button>
+  <!-- FAQ Section -->
+  <section class="faq-section" id="faq">
+    <div class="faq-title">FAQ</div>
+    <div class="faq-item" onclick="toggleFaq(this)">
+      <div class="faq-q">Apakah SleepWell AI gratis? <span>▼</span></div>
+      <div class="faq-a">Ya, SleepWell AI gratis untuk semua pengguna, tanpa biaya tersembunyi.</div>
     </div>
-  </div>
-</section>
-<script>
-const testimonials = [
-  {
-    img: "https://randomuser.me/api/portraits/women/65.jpg",
-    quote: "“SleepWell AI bener-bener bantu aku atur pola tidur! Sekarang bangun pagi lebih segar dan produktif.”",
-    name: "— Nadia, Mahasiswi"
-  },
-  {
-    img: "https://randomuser.me/api/portraits/men/47.jpg",
-    quote: "“Analisis tidurnya detail, rekomendasinya mudah diterapkan. Data privasi juga terjaga!”",
-    name: "— Andi, Data Analyst"
-  },
-  {
-    img: "https://randomuser.me/api/portraits/men/9.jpg",
-    quote: "“Saya jadi sadar pentingnya sleep hygiene. Grafik riwayatnya keren dan mudah dimengerti.”",
-    name: "— Budi, Guru"
-  },
-  {
-    img: "https://randomuser.me/api/portraits/women/89.jpg",
-    quote: "“Tim support SleepWell AI cepat tanggap, dan desain aplikasinya user-friendly banget!”",
-    name: "— Siska, Ibu Rumah Tangga"
-  }
-];
-let testiIdx = 0;
-function updateTesti(idx) {
-  document.getElementById('testi-img').src = testimonials[idx].img;
-  document.getElementById('testi-quote').innerHTML = testimonials[idx].quote;
-  document.getElementById('testi-name').innerHTML = testimonials[idx].name;
-}
-function prevTesti(e) { e.stopPropagation(); testiIdx = (testiIdx + testimonials.length - 1) % testimonials.length; updateTesti(testiIdx);}
-function nextTesti(e) { e.stopPropagation(); testiIdx = (testiIdx + 1) % testimonials.length; updateTesti(testiIdx);}
-setInterval(()=>{testiIdx=(testiIdx+1)%testimonials.length;updateTesti(testiIdx);},7000);
-</script>
+    <div class="faq-item" onclick="toggleFaq(this)">
+      <div class="faq-q">Apakah data saya aman & rahasia? <span>▼</span></div>
+      <div class="faq-a">Tentu. Semua data Anda terenkripsi dan tidak pernah dibagikan ke pihak luar.</div>
+    </div>
+    <div class="faq-item" onclick="toggleFaq(this)">
+      <div class="faq-q">Bagaimana SleepWell AI memprediksi tidur? <span>▼</span></div>
+      <div class="faq-a">Kami menggunakan algoritma machine learning dari data aktivitas, stress, pola tidur, dan gaya hidup Anda untuk hasil prediksi akurat dan personal.</div>
+    </div>
+    <div class="faq-item" onclick="toggleFaq(this)">
+      <div class="faq-q">Apakah SleepWell bisa digunakan semua umur? <span>▼</span></div>
+      <div class="faq-a">Bisa. Cocok untuk remaja, dewasa, hingga lansia. Data rekomendasi akan menyesuaikan usia dan profil pengguna.</div>
+    </div>
+  </section>
+  <script>
+    function toggleFaq(el) {
+      document.querySelectorAll('.faq-item').forEach(i=>i!==el&&i.classList.remove('open'));
+      el.classList.toggle('open');
+    }
+  </script>
 
-<!-- CTA Section -->
-<section class="cta-section">
-  <div class="cta-title">Saatnya Tidur Berkualitas, Hidup Lebih Bahagia.</div>
-  <div>Gabung bersama ribuan pengguna. Gratis, privasi terjamin, dan dukungan penuh SleepWell AI!</div>
-  <a href="sign-up.html" class="btn cta-btn">Mulai Gratis Sekarang</a>
-</section>
+  <!-- Testimoni Section -->
+  <section class="testi-section" id="testi">
+    <div class="testi-title">Apa Kata Pengguna?</div>
+    <div class="testi-box" id="testi-box">
+      <img class="testi-img" id="testi-img" src="https://randomuser.me/api/portraits/women/65.jpg"/>
+      <div class="testi-quote" id="testi-quote">“SleepWell AI bener-bener bantu aku atur pola tidur! Sekarang bangun pagi lebih segar dan produktif.”</div>
+      <div class="testi-name" id="testi-name">— Nadia, Mahasiswi</div>
+      <div class="testi-arrows">
+        <button class="testi-arrow" onclick="prevTesti(event)">&lt;</button>
+        <button class="testi-arrow" onclick="nextTesti(event)">&gt;</button>
+      </div>
+    </div>
+  </section>
+  <script>
+    const testimonials = [
+      {
+        img: "https://randomuser.me/api/portraits/women/65.jpg",
+        quote: "“SleepWell AI bener-bener bantu aku atur pola tidur! Sekarang bangun pagi lebih segar dan produktif.”",
+        name: "— Nadia, Mahasiswi"
+      },
+      {
+        img: "https://randomuser.me/api/portraits/men/47.jpg",
+        quote: "“Analisis tidurnya detail, rekomendasinya mudah diterapkan. Data privasi juga terjaga!”",
+        name: "— Andi, Data Analyst"
+      },
+      {
+        img: "https://randomuser.me/api/portraits/men/9.jpg",
+        quote: "“Saya jadi sadar pentingnya sleep hygiene. Grafik riwayatnya keren dan mudah dimengerti.”",
+        name: "— Budi, Guru"
+      },
+      {
+        img: "https://randomuser.me/api/portraits/women/89.jpg",
+        quote: "“Tim support SleepWell AI cepat tanggap, dan desain aplikasinya user-friendly banget!”",
+        name: "— Siska, Ibu Rumah Tangga"
+      }
+    ];
+    let testiIdx = 0;
+    function updateTesti(idx) {
+      document.getElementById('testi-img').src = testimonials[idx].img;
+      document.getElementById('testi-quote').innerHTML = testimonials[idx].quote;
+      document.getElementById('testi-name').innerHTML = testimonials[idx].name;
+    }
+    function prevTesti(e) { e.stopPropagation(); testiIdx = (testiIdx + testimonials.length - 1) % testimonials.length; updateTesti(testiIdx);}
+    function nextTesti(e) { e.stopPropagation(); testiIdx = (testiIdx + 1) % testimonials.length; updateTesti(testiIdx);}
+    setInterval(()=>{testiIdx=(testiIdx+1)%testimonials.length;updateTesti(testiIdx);},7000);
+  </script>
 
-<!-- Footer -->
-<footer id="contact">
-  <div class="footer-row">
-    <img src="https://api.iconify.design/lucide:moon-star.svg?color=%236751ef&width=32" class="footer-logo" alt="Logo SleepWell"/>
-    <span class="navbar-logo" style="font-size:1.11rem">SleepWell <span style="color:var(--blue)">AI</span></span>
-    <a href="mailto:support@sleepwellai.id" class="footer-link">support@sleepwellai.id</a>
-    <a href="#" class="footer-link">Kebijakan Privasi</a>
-    <a href="#" class="footer-link">Instagram</a>
-    <a href="#" class="footer-link">LinkedIn</a>
-  </div>
-  <div class="footer-partner">
-    <img src="https://unpkg.com/simple-icons@latest/icons/flutter.svg" alt="Flutter"/>
-    <img src="https://unpkg.com/simple-icons@latest/icons/tailwindcss.svg" alt="TailwindCSS"/>
-    <img src="https://unpkg.com/simple-icons@latest/icons/supabase.svg" alt="Supabase"/>
-  </div>
-  <div class="footer-copy">SleepWell AI &copy; 2025 &middot; Powered by DevAcademy.id &middot; All rights reserved.</div>
-</footer>
+  <!-- CTA Section -->
+  <section class="cta-section">
+    <div class="cta-title">Saatnya Tidur Berkualitas, Hidup Lebih Bahagia.</div>
+    <div>Gabung bersama ribuan pengguna. Gratis, privasi terjamin, dan dukungan penuh SleepWell AI!</div>
+    <a href="sign-up.html" class="btn cta-btn">Mulai Gratis Sekarang</a>
+  </section>
+
+  <!-- Footer -->
+  <footer id="contact">
+    <div class="footer-row">
+      <img src="https://api.iconify.design/lucide:moon-star.svg?color=%236751ef&width=32" class="footer-logo" alt="Logo SleepWell"/>
+      <span class="navbar-logo" style="font-size:1.11rem">SleepWell <span style="color:var(--blue)">AI</span></span>
+      <a href="mailto:support@sleepwellai.id" class="footer-link">support@sleepwellai.id</a>
+      <a href="#" class="footer-link">Kebijakan Privasi</a>
+      <a href="#" class="footer-link">Instagram</a>
+      <a href="#" class="footer-link">LinkedIn</a>
+    </div>
+    <div class="footer-partner">
+      <img src="https://unpkg.com/simple-icons@latest/icons/flutter.svg" alt="Flutter"/>
+      <img src="https://unpkg.com/simple-icons@latest/icons/tailwindcss.svg" alt="TailwindCSS"/>
+      <img src="https://unpkg.com/simple-icons@latest/icons/supabase.svg" alt="Supabase"/>
+    </div>
+    <div class="footer-copy">SleepWell AI &copy; 2025 &middot; Powered by DevAcademy.id &middot; All rights reserved.</div>
+  </footer>
 </body>
 </html>
