--- a/cbti/cbt-apnea-akut.html
+++ b/cbti/cbt-apnea-akut.html
@@ -3,6 +3,7 @@
 <head>
   <title>Tips CBT untuk Sleep Apnea Akut</title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
   <h2>Tips CBT untuk Sleep Apnea Akut</h2>
