--- a/cbti/cbt-insomnia-sleeprestriction.html
+++ b/cbti/cbt-insomnia-sleeprestriction.html
@@ -3,6 +3,7 @@
 <head>
   <title>CBTI Sleep Restriction untuk Insomnia</title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
   <h2>CBTI Sleep Restriction untuk Insomnia</h2>
