--- a/cbti/cbt-tidurpendek.html
+++ b/cbti/cbt-tidurpendek.html
@@ -3,6 +3,7 @@
 <head>
   <title>Tips Menambah Durasi Tidur</title>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="style/style.css" />
 </head>
 <body>
   <h2>Tips Menambah Durasi Tidur</h2>
