--- a/cbti/cbt-hygiene-buruk.html
+++ b/cbti/cbt-hygiene-buruk.html
@@ -3,7 +3,7 @@
 <head>
   <title>Sleep Hygiene & Relaksasi</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
   <h2>Sleep Hygiene & Relaksasi</h2>
