--- a/cbti/cbt-hypersomnia.html
+++ b/cbti/cbt-hypersomnia.html
@@ -3,7 +3,7 @@
 <head>
   <title>CBTI untuk Hypersomnia</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
   <h2>CBTI untuk Hypersomnia</h2>
