--- a/cbti/cbt-insomnia-kognitif.html
+++ b/cbti/cbt-insomnia-kognitif.html
@@ -3,7 +3,7 @@
 <head>
   <title>CBTI Kognitif untuk Insomnia</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
   <h2>CBTI Kognitif untuk Insomnia</h2>
