--- a/cbti/cbt-insomnia-maintenance.html
+++ b/cbti/cbt-insomnia-maintenance.html
@@ -3,7 +3,7 @@
 <head>
   <title>Pemeliharaan Pola Tidur Setelah CBTI</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
   <h2>Pemeliharaan Pola Tidur Sehat Setelah CBTI</h2>
