--- a/cbti/cbt-pemeliharaan.html
+++ b/cbti/cbt-pemeliharaan.html
@@ -3,7 +3,7 @@
 <head>
   <title>Pemeliharaan Kebiasaan Tidur Baik</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
   <h2>Pemeliharaan Kebiasaan Tidur Baik</h2>
