--- a/cbti/cbt-umum.html
+++ b/cbti/cbt-umum.html
@@ -3,7 +3,7 @@
 <head>
   <title>Tips Umum Pola Tidur Sehat</title>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="style/style.css" />
+  <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
   <h2>Tips Umum Pola Tidur Sehat</h2>
