--- a/cbti/cbt-apnea-akut.html
+++ b/cbti/cbt-apnea-akut.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tips CBT untuk Sleep Apnea Akut</title>
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>Tips CBT untuk Sleep Apnea Akut</h2>
-  <p>
-    Sleep apnea adalah gangguan tidur akibat saluran napas sering menutup saat tidur, menyebabkan kantuk dan durasi tidur pendek.
-  </p>
-  <ul>
-    <li>Tidur miring, jangan telentang.</li>
-    <li>Jaga berat badan ideal.</li>
-    <li>Hindari alkohol, rokok, obat penenang sebelum tidur.</li>
-    <li>Konsultasi ke dokter jika sering terbangun dengan napas tersengal.</li>
-  </ul>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/sleep-apnea/treatment">Sleep Foundation – Sleep Apnea</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>Tips CBT untuk Sleep Apnea Akut</h2>
+      <p>
+        Sleep apnea adalah gangguan tidur akibat saluran napas sering menutup saat tidur, menyebabkan kantuk dan durasi tidur pendek.
+      </p>
+      <ul>
+        <li>Tidur miring, jangan telentang.</li>
+        <li>Jaga berat badan ideal.</li>
+        <li>Hindari alkohol, rokok, obat penenang sebelum tidur.</li>
+        <li>Konsultasi ke dokter jika sering terbangun dengan napas tersengal.</li>
+      </ul>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/sleep-apnea/treatment" target="_blank">
+            Sleep Foundation – Sleep Apnea
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
