--- a/cbti/cbt-apnea-sleephygiene.html
+++ b/cbti/cbt-apnea-sleephygiene.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Hygiene untuk Sleep Apnea</title>
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>Sleep Hygiene untuk Sleep Apnea</h2>
-  <p>
-    Sleep hygiene = kebiasaan sehat agar gejala apnea berkurang dan tidur lebih nyenyak.
-  </p>
-  <ul>
-    <li>Kamar sejuk, gelap, sunyi.</li>
-    <li>Gunakan bantal yang nyaman (tidak terlalu tinggi/rendah).</li>
-    <li>Olahraga rutin, tapi hindari olahraga berat menjelang tidur.</li>
-    <li>Jika pakai CPAP, pastikan alat bersih dan terpasang benar.</li>
-  </ul>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/sleep-apnea/treatment">Sleep Foundation – Sleep Apnea</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>Sleep Hygiene untuk Sleep Apnea</h2>
+      <p>
+        Sleep hygiene = kebiasaan sehat agar gejala apnea berkurang dan tidur lebih nyenyak.
+      </p>
+      <ul>
+        <li>Kamar sejuk, gelap, sunyi.</li>
+        <li>Gunakan bantal yang nyaman (tidak terlalu tinggi/rendah).</li>
+        <li>Olahraga rutin, tapi hindari olahraga berat menjelang tidur.</li>
+        <li>Jika pakai CPAP, pastikan alat bersih dan terpasang benar.</li>
+      </ul>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/sleep-apnea/treatment" target="_blank">
+            Sleep Foundation – Sleep Apnea
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
