--- a/cbti/cbt-hygiene-buruk.html
+++ b/cbti/cbt-hygiene-buruk.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Hygiene & Relaksasi</title>
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>Sleep Hygiene & Relaksasi</h2>
-  <p>
-    Jika tidur kurang berkualitas tanpa gangguan medis spesifik, penyebabnya sering dari pola hidup kurang sehat.
-  </p>
-  <ul>
-    <li>Matikan gadget 30 menit sebelum tidur.</li>
-    <li>Hindari kafein sore/malam.</li>
-    <li>Relaksasi (pernapasan, meditasi, musik tenang) sebelum tidur.</li>
-    <li>Kamar gelap, nyaman, suhu pas.</li>
-  </ul>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/sleep-hygiene">Sleep Foundation – Sleep Hygiene</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>Sleep Hygiene & Relaksasi</h2>
+      <p>
+        Jika tidur kurang berkualitas tanpa gangguan medis spesifik, penyebabnya sering dari pola hidup kurang sehat.
+      </p>
+      <ul>
+        <li>Matikan gadget 30 menit sebelum tidur.</li>
+        <li>Hindari kafein sore/malam.</li>
+        <li>Relaksasi (pernapasan, meditasi, musik tenang) sebelum tidur.</li>
+        <li>Kamar gelap, nyaman, suhu pas.</li>
+      </ul>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/sleep-hygiene" target="_blank">
+            Sleep Foundation – Sleep Hygiene
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
