--- a/cbti/cbt-hypersomnia.html
+++ b/cbti/cbt-hypersomnia.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CBTI untuk Hypersomnia</title>
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>CBTI untuk Hypersomnia</h2>
-  <p>
-    Hypersomnia = tidur berlebihan (&gt;9 jam/hari) tapi tetap merasa ngantuk dan kualitas tidur rendah.
-  </p>
-  <ul>
-    <li>Evaluasi ulang jadwal tidur agar tidak terlalu lama di kasur.</li>
-    <li>Fokus aktivitas pagi (olahraga ringan, mandi pagi).</li>
-    <li>Batasi tidur siang max 20–30 menit.</li>
-    <li>Jika tetap ngantuk, konsultasi ke dokter untuk evaluasi sleep disorder lain.</li>
-  </ul>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/hypersomnia">Sleep Foundation – Hypersomnia</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>CBTI untuk Hypersomnia</h2>
+      <p>
+        Hypersomnia = tidur berlebihan (&gt;9 jam/hari) tapi tetap merasa ngantuk dan kualitas tidur rendah.
+      </p>
+      <ul>
+        <li>Evaluasi ulang jadwal tidur agar tidak terlalu lama di kasur.</li>
+        <li>Fokus aktivitas pagi (olahraga ringan, mandi pagi).</li>
+        <li>Batasi tidur siang max 20–30 menit.</li>
+        <li>Jika tetap ngantuk, konsultasi ke dokter untuk evaluasi sleep disorder lain.</li>
+      </ul>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/hypersomnia" target="_blank">
+            Sleep Foundation – Hypersomnia
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
