--- a/cbti/cbt-insomnia-maintenance.html
+++ b/cbti/cbt-insomnia-maintenance.html
@@ -1,25 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
-  <title>Pemeliharaan Pola Tidur Setelah CBTI</title>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Pemeliharaan Pola Tidur Sehat Setelah CBTI</title>
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>Pemeliharaan Pola Tidur Sehat Setelah CBTI</h2>
-  <p>
-    Setelah insomnia membaik, penting untuk mempertahankan kebiasaan sehat agar tidak kambuh.
-  </p>
-  <ul>
-    <li>Jadwal tidur-bangun konsisten, bahkan di akhir pekan.</li>
-    <li>Hindari tidur siang terlalu lama (&gt;30 menit).</li>
-    <li>Lanjutkan relaksasi sebelum tidur.</li>
-    <li>Jika insomnia kambuh, ulangi teknik CBTI dari awal.</li>
-  </ul>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/insomnia/treatment/cognitive-behavioral-therapy-for-insomnia">Sleep Foundation – CBTI</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>Pemeliharaan Pola Tidur Sehat Setelah CBTI</h2>
+      <p>
+        Setelah insomnia membaik, penting untuk mempertahankan kebiasaan sehat agar tidak kambuh.
+      </p>
+      <ul>
+        <li>Jadwal tidur‑bangun konsisten, bahkan di akhir pekan.</li>
+        <li>Hindari tidur siang terlalu lama (&gt;30 menit).</li>
+        <li>Lanjutkan relaksasi sebelum tidur.</li>
+        <li>Jika insomnia kambuh, ulangi teknik CBTI dari awal.</li>
+      </ul>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/insomnia/treatment/cognitive-behavioral-therapy-for-insomnia" target="_blank">
+            Sleep Foundation – CBTI
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
