--- a/cbti/cbt-insomnia-sleeprestriction.html
+++ b/cbti/cbt-insomnia-sleeprestriction.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>CBTI Sleep Restriction untuk Insomnia</title>
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>CBTI Sleep Restriction untuk Insomnia</h2>
-  <p>
-    Teknik <b>sleep restriction</b> membatasi waktu di kasur agar tubuh belajar tidur lebih efisien, bukan cuma rebahan lama tanpa tidur.
-  </p>
-  <h3>Penjelasan Ilmiah</h3>
-  <p>
-    Membatasi waktu tidur sesuai waktu tidur nyata akan meningkatkan tekanan tidur sehingga tidur lebih nyenyak. Jika efisiensi &gt;85%, waktu tidur boleh ditambah sedikit demi sedikit.
-  </p>
-  <h3>Langkah:</h3>
-  <ol>
-    <li>Catat waktu tidur nyata setiap malam selama 1 minggu.</li>
-    <li>Atur jam tidur-bangun ketat (misal hanya 6 jam jika tidur efektif 6 jam).</li>
-    <li>Tambah 15–30 menit waktu tidur tiap minggu jika efisiensi membaik.</li>
-  </ol>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/insomnia/treatment/cognitive-behavioral-therapy-for-insomnia">Sleep Foundation – CBTI</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>CBTI Sleep Restriction untuk Insomnia</h2>
+      <p>
+        Teknik <b>sleep restriction</b> membatasi waktu di kasur agar tubuh belajar tidur lebih efisien, bukan cuma rebahan lama tanpa tidur.
+      </p>
+      <h3>Penjelasan Ilmiah</h3>
+      <p>
+        Membatasi waktu tidur sesuai waktu tidur nyata akan meningkatkan tekanan tidur sehingga tidur lebih nyenyak. Jika efisiensi &gt;85%, waktu tidur boleh ditambah sedikit demi sedikit.
+      </p>
+      <h3>Langkah:</h3>
+      <ol>
+        <li>Catat waktu tidur nyata setiap malam selama 1 minggu.</li>
+        <li>Atur jam tidur‑bangun ketat (misal hanya 6 jam jika tidur efektif 6 jam).</li>
+        <li>Tambah 15–30 menit waktu tidur tiap minggu jika efisiensi membaik.</li>
+      </ol>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/insomnia/treatment/cognitive-behavioral-therapy-for-insomnia" target="_blank">
+            Sleep Foundation – CBTI
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
