--- a/cbti/cbt-pemeliharaan.html
+++ b/cbti/cbt-pemeliharaan.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pemeliharaan Kebiasaan Tidur Baik</title>
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>Pemeliharaan Kebiasaan Tidur Baik</h2>
-  <ul>
-    <li>Tidur-bangun jam yang sama tiap hari.</li>
-    <li>Rutin olahraga ringan.</li>
-    <li>Jangan makan berat mendekati waktu tidur.</li>
-    <li>Jika stres, gunakan relaksasi sebelum tidur.</li>
-  </ul>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/sleep-hygiene">Sleep Foundation – Sleep Hygiene</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>Pemeliharaan Kebiasaan Tidur Baik</h2>
+      <ul>
+        <li>Tidur‑bangun jam yang sama tiap hari.</li>
+        <li>Rutin olahraga ringan.</li>
+        <li>Jangan makan berat mendekati waktu tidur.</li>
+        <li>Jika stres, gunakan relaksasi sebelum tidur.</li>
+      </ul>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/sleep-hygiene" target="_blank">
+            Sleep Foundation – Sleep Hygiene
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
