--- a/cbti/cbt-tidurpendek.html
+++ b/cbti/cbt-tidurpendek.html
@@ -1,24 +1,33 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tips Menambah Durasi Tidur</title>
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>Tips Menambah Durasi Tidur</h2>
-  <p>
-    Jika kualitas tidur baik, tapi durasi masih kurang, lakukan penyesuaian perlahan.
-  </p>
-  <ul>
-    <li>Tambah waktu tidur 15-30 menit lebih awal setiap minggu.</li>
-    <li>Atur aktivitas malam agar selesai lebih awal.</li>
-    <li>Jangan tidur siang terlalu lama.</li>
-  </ul>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/how-sleep-works/how-much-sleep-do-we-really-need">Sleep Foundation – How Much Sleep?</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>Tips Menambah Durasi Tidur</h2>
+      <p>
+        Jika kualitas tidur baik, tapi durasi masih kurang, lakukan penyesuaian perlahan.
+      </p>
+      <ul>
+        <li>Tambah waktu tidur 15–30 menit lebih awal setiap minggu.</li>
+        <li>Atur aktivitas malam agar selesai lebih awal.</li>
+        <li>Jangan tidur siang terlalu lama.</li>
+      </ul>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/how-sleep-works/how-much-sleep-do-we-really-need" target="_blank">
+            Sleep Foundation – How Much Sleep?
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
