--- a/cbti/cbt-umum.html
+++ b/cbti/cbt-umum.html
@@ -1,23 +1,32 @@
 <!DOCTYPE html>
-<html>
+<html lang="id">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tips Umum Pola Tidur Sehat</title>
-  <meta charset="UTF-8">
   <link rel="stylesheet" href="../style/style.css" />
 </head>
 <body>
-  <h2>Tips Umum Pola Tidur Sehat</h2>
-  <ul>
-    <li>Jaga rutinitas tidur dan bangun yang konsisten.</li>
-    <li>Kamar gelap, sunyi, dan nyaman.</li>
-    <li>Hindari kafein, alkohol, makanan berat sebelum tidur.</li>
-    <li>Jika kesulitan tidur, bangun sebentar, lakukan aktivitas ringan, lalu kembali tidur.</li>
-    <li>Olahraga teratur dan paparan cahaya pagi hari.</li>
-  </ul>
-  <h3>Referensi:</h3>
-  <ul>
-    <li><a href="https://www.sleepfoundation.org/sleep-hygiene">Sleep Foundation – Sleep Hygiene</a></li>
-  </ul>
-  <button onclick="window.history.back()">Kembali</button>
+  <div class="container">
+    <section>
+      <h2>Tips Umum Pola Tidur Sehat</h2>
+      <ul>
+        <li>Jaga rutinitas tidur dan bangun yang konsisten.</li>
+        <li>Kamar gelap, sunyi, dan nyaman.</li>
+        <li>Hindari kafein, alkohol, makanan berat sebelum tidur.</li>
+        <li>Jika kesulitan tidur, bangun sebentar, lakukan aktivitas ringan, lalu kembali tidur.</li>
+        <li>Olahraga teratur dan paparan cahaya pagi hari.</li>
+      </ul>
+      <h3>Referensi:</h3>
+      <ul>
+        <li>
+          <a href="https://www.sleepfoundation.org/sleep-hygiene" target="_blank">
+            Sleep Foundation – Sleep Hygiene
+          </a>
+        </li>
+      </ul>
+      <button class="btn-back" onclick="window.history.back()">Kembali</button>
+    </section>
+  </div>
 </body>
 </html>
